planning: view: fixed the TECO orders having an invalid background color in the high contrast mode.

--- a/frontend/app/planning/assets/plan.darker.css
+++ b/frontend/app/planning/assets/plan.darker.css
@@ -32,6 +32,9 @@
 .planning-darker .planning-mrp-list-item.is-surplus {
   background-color: #f00;
 }
+.planning-darker .planning-mrp-list-item.is-teco {
+  background-color: #000;
+}
 .planning-darker .planning-mrp-list-item.is-selected {
   background-color: #0af;
 }
